--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 OpenBSM Version History
 
+- Add support for setting the audit kernel information.  This information
+  will be used when setting the host information for extended header tokens.
+  The audit_control file now supports a "host" parameter which can be used
+  by the auditing daemon to set this information.  If this parameter is not
+  used, the OpenBSM will default to the use of regular tokens.
+
 OpenBSM 1.1 alpha 2
 
 - Include files in OpenBSM are now broken out into two parts: library builds
@@ -341,4 +347,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#7 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#8 $
