--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 OpenBSM Version History
 
+- Fix a bug how au_to_exec_args(3) and au_to_exec_env(3) calculates the total
+  size for the token.  This bug resulted in "unknown" tokens being printed
+  after the exec args/env tokens.
+
 OpenBSM 1.1 alpha 3
 
 - Add two new functions, au_bsm_to_errno() and au_errno_to_bsm(), to map
@@ -356,4 +360,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#12 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#13 $
