Add support for the AUT_SOCKET_EX token type, which contains a socket domain, socket type, address type, and two IPv4/IPv6 port/address tuples.  This required:
(1) Fixing the existing AUT_SOCKET_EX parsing and printing code
    in libbsm.

(2) Add au_to_socket_ex() token generation function, which
    accepts socket domain, socket type, and two
    sockaddr_{in,in6}'s.

(3) Add test record generation and reference token/records to
    the test tree.

(4) Remove prototypes for non-prsent au_to_socket_ex_{32,128}()
    generation functions.

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 153916]

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ OpenBSM 1.1 alpha 3
 - Fix a bug how au_to_exec_args(3) and au_to_exec_env(3) calculates the total
   size for the token.  This bug resulted in "unknown" tokens being printed
   after the exec args/env tokens.
+- Support for AUT_SOCKET_EX extended socket tokens, which describe a socket
+  using a pair of IPv4/IPv6 and port tuples.
 
 OpenBSM 1.1 alpha 2
 
@@ -359,4 +361,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#14 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#15 $
