--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 OpenBSM Version History
 
+OpenBSM 1.1 alpha 4
+
 OpenBSM 1.1 alpha 3
 
 - Add two new functions, au_bsm_to_errno() and au_errno_to_bsm(), to map
@@ -363,4 +365,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#16 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#17 $
