Various mdoc and typo fixes.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 154497]

--- a/bin/audit/audit.8
+++ b/bin/audit/audit.8
@@ -25,9 +25,9 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/audit/audit.8#12 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/audit/audit.8#13 $
 .\"
-.Dd October 2, 2006
+.Dd December 11, 2008
 .Dt AUDIT 8
 .Os
 .Sh NAME
@@ -44,9 +44,12 @@ One of the following flags is required as an argument to
 .Nm :
 .Bl -tag -width indent
 .It Fl i
-Initializes and starts auditing.  This option is currently for Mac OS X only
-and requires auditd to be configured to run under 
-.Xr Launchd 8 .
+Initializes and starts auditing.
+This option is currently for Mac OS X only
+and requires
+.Xr auditd 8
+to be configured to run under 
+.Xr launchd 8 .
 .It Fl n
 Forces the audit system to close the existing audit log file and rotate to
 a new log file in a location specified in the audit control file.
@@ -62,9 +65,10 @@ and renamed to indicate the time of the shutdown.
 .Sh NOTES
 The
 .Xr auditd 8
-daemon must already be running. Optionally, it can be configured to be started
+daemon must already be running.
+Optionally, it can be configured to be started
 on-demand by
-.Xr Launchd 8
+.Xr launchd 8
 (Mac OS X only).
 The
 .Nm 
