--- a/libbsm/au_errno.3
+++ b/libbsm/au_errno.3
@@ -26,7 +26,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE. 
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_errno.3#2 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_errno.3#3 $
 .\"
 .Dd December 8, 2008
 .Dt AU_BSM_TO_ERRNO 3
@@ -44,7 +44,7 @@
 .Fn au_bsm_to_errno "u_char bsm_error" "int *errorp"
 .Ft u_char
 .Fn au_errno_to_bsm "int error"
-.Ft char *
+.Ft const char *
 .Fn au_strerror "int bsm_error"
 .Sh DESCRIPTION
 These interfaces may be used to convert between the local (
@@ -105,3 +105,7 @@ under contract to Apple Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
+.Sh BUGS
+.Nm au_strerror
+is unable to provide localized strings for errors not available in the local
+operating system.
