--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 OpenBSM Version History
 
+OpenBSM 1.1 alpha 5
+
+- Stub libauditd(3) man page added.
+
 OpenBSM 1.1 alpha 4
 
 - With the addition of BSM error number mapping, we also need to map the
@@ -393,4 +397,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#21 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#22 $
