Further cross-referencing from libbsm(3) to the domain, errno, and socket type constant conversion functions.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 155373]

--- a/libbsm/libbsm.3
+++ b/libbsm/libbsm.3
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/libbsm.3#15 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/libbsm.3#16 $
 .\"
 .Dd November 12, 2008
 .Dt LIBBSM 3
@@ -206,12 +206,15 @@ and interpret BSM return and extended socket tokens:
 .Xr au_socket_type_to_bsm 3 .
 .Sh SEE ALSO
 .Xr au_class 3 ,
-.Xr audit_submit 3 ,
+.Xr au_domain 3 ,
+.Xr au_errno 3 ,
 .Xr au_mask 3 ,
 .Xr au_notify 3 ,
+.Xr au_socket_type 3 ,
 .Xr au_stream 3 ,
 .Xr au_token 3 ,
 .Xr au_user 3 ,
+.Xr audit_submit 3 ,
 .Xr audit_class 5 ,
 .Xr audit_control 5
 .Sh HISTORY
