--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,8 @@ OpenBSM 1.1 alpha 5
   and from Solaris constants (where available) or OpenBSM constants for
   protocol domains not present in Solaris (a fair number).  These routines
   should be used when generating and interpreting extended socket tokens.
+- Fix build warnings with full gcc warnings enabled on most supported
+  platforms.
 
 OpenBSM 1.1 alpha 4
 
@@ -406,4 +408,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#24 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#25 $
