--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,8 @@ OpenBSM 1.1 alpha 5
   should be used when generating and interpreting extended socket tokens.
 - Fix build warnings with full gcc warnings enabled on most supported
   platforms.
+- Don't compile error strings into bsm_errno.c when building it in the kernel
+  environment.
 
 OpenBSM 1.1 alpha 4
 
@@ -408,4 +410,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#25 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#26 $
