--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,8 @@ OpenBSM 1.1 alpha 5
   platforms.
 - Don't compile error strings into bsm_errno.c when building it in the kernel
   environment.
+- When started by launchd, use the label com.apple.auditd rather than
+  org.trustedbsd.auditd.
 
 OpenBSM 1.1 alpha 4
 
@@ -410,4 +412,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#26 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#27 $
