--- a/bin/audit/audit.8
+++ b/bin/audit/audit.8
@@ -25,7 +25,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/audit/audit.8#14 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/audit/audit.8#15 $
 .\"
 .Dd January 29, 2009
 .Dt AUDIT 8
@@ -44,7 +44,7 @@ One of the following flags is required as an argument to
 .Nm :
 .Bl -tag -width indent
 .It Fl e
-Forces the audit system to immmediately removed audit log files that
+Forces the audit system to immediately remove audit log files that
 meet the expiration criteria specified in the audit control file without
 doing a log rotation. 
 .It Fl i
