--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,8 @@ OpenBSM 1.1 beta 1
   cnt,argv rather than cnt so that execve(2) arguments are captured if
   AUE_EXECVE events are audited.  These may provide more usable defaults for
   many users.
+- Use au_domain_to_bsm(3) and au_socket_type_to_bsm(3) to convert
+  au_to_socket_ex(3) arguments to BSM format.
 
 OpenBSM 1.1 alpha 5
 
@@ -428,4 +430,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#30 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#31 $
