--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 OpenBSM Version History
 
+OpenBSM 1.1 beta 2
+
+- Change auditon(2) parameters and data structures to be 32/64-bit architecture
+  independent.  Add more information to man page about auditon(2) parameters. 
+
 OpenBSM 1.1 beta 1
 
 - The filesz parameter in audit_control(5) now accepts suffixes: 'B' for
@@ -431,4 +436,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#32 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#33 $
