--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ OpenBSM 1.1 beta 2
   commands are not supported.
 - Add default for 'expire-after' in audit_control to expire trail files when
   the audit directory is more than 10 megabytes ('10M').
+- Interface to convert between local and BSM fcntl(2) command values has been
+  added:  au_bsm_to_fcntl_cmd(3) and au_fcntl_cmd_to_bsm(3), along with 
+  definitions of constants in audit_fcntl.h.
 
 OpenBSM 1.1 beta 1
 
@@ -440,4 +443,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#35 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#36 $
