--- a/bin/auditfilterd/auditfilterd.8
+++ b/bin/auditfilterd/auditfilterd.8
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditfilterd/auditfilterd.8#4 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditfilterd/auditfilterd.8#5 $
 .\"
 .Dd October 3, 2006
 .Dt AUDITFILTERD 8
@@ -42,9 +42,7 @@ The
 .Nm
 daemon is an extensible audit event monitoring daemon, allowing pluggable
 modules to track audit events from a live audit source.
-It is configured using the
-.Xr audit_filter 5
-configuration file.
+It is configured using the audit_filter configuration file.
 The source can either be a pipe or a file.
 .Pp
 The options are as follows:
