--- a/bin/auditfilterd/auditfilterd.8
+++ b/bin/auditfilterd/auditfilterd.8
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditfilterd/auditfilterd.8#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditfilterd/auditfilterd.8#6 $
 .\"
 .Dd October 3, 2006
 .Dt AUDITFILTERD 8
@@ -80,3 +80,7 @@ The
 .Nm
 daemon and audit filter APIs were created by
 .An Robert Watson .
+.Sh BUGS
+.Nm
+is experimental, and should not be relied on in production.
+APIs and services it offers can and will change in future OpenBSM releases.
