--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 OpenBSM Version History
 
+OpenBSM 1.1p1
+
+- Add missing conversion of a number of FreeBSD/Mac OS X errnos to/from BSM
+  error number space.
+
 OpenBSM 1.1
 
 - Change auditon(2) parameters and data structures to be 32/64-bit architecture
@@ -449,4 +454,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#40 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#41 $
