--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ OpenBSM Version History
 
 OpenBSM 1.1p1
 
+- Fixes to AUT_SOCKUNIX token parsing.
+- IPv6 support for au_to_me(3).
+- Improved robustness in the parsing of audit_control, especially long
+  flags/naflags strings and whitespace in all fields.
 - Add missing conversion of a number of FreeBSD/Mac OS X errnos to/from BSM
   error number space.
 
@@ -454,4 +458,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#41 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#42 $
