--- a/libbsm/au_io.3
+++ b/libbsm/au_io.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_io.3#6 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_io.3#7 $
 .\"
 .Dd August 4, 2009
 .Dt AU_IO 3
@@ -31,6 +31,7 @@
 .Sh NAME
 .Nm au_fetch_tok ,
 .Nm au_print_tok ,
+.Nm au_print_flags_tok ,
 .Nm au_read_rec
 .Nd "perform I/O involving an audit record"
 .Sh LIBRARY
@@ -43,12 +44,12 @@
 .Fo au_print_tok
 .Fa "FILE *outfp" "tokenstr_t *tok" "char *del" "char raw" "char sfrm"
 .Fc
-.Ft int
-.Fn au_read_rec "FILE *fp" "u_char **buf"
 .Ft void
-.Fo au_write_tok
+.Fo au_print_flags_tok
 .Fa "FILE *outfp" "tokenstr_t *tok" "char *del" "int oflags"
 .Fc
+.Ft int
+.Fn au_read_rec "FILE *fp" "u_char **buf"
 .Sh DESCRIPTION
 These interfaces support input and output (I/O) involving audit records,
 internalizing an audit record from a byte stream, converting a token to
@@ -78,7 +79,7 @@ The delimiter
 .Fa del
 is used when printing.
 The
-.Fn au_write_tok
+.Fn au_print_flags_tok
 function is a replacement for
 .Fn au_print_tok .
 The 
@@ -118,7 +119,7 @@ Each record would be broken down into components tokens through sequential
 calls to
 .Fn au_fetch_tok
 on the buffer, and then invoking
-.Fn au_write_tok
+.Fn au_print_flags_tok
 to print each token to an output stream such as
 .Dv stdout .
 On completion of the processing of each record, a call to
@@ -143,6 +144,15 @@ The OpenBSM implementation was created by McAfee Research, the security
 division of McAfee Inc., under contract to Apple Computer, Inc., in 2004.
 It was subsequently adopted by the TrustedBSD Project as the foundation for
 the OpenBSM distribution.
+.Pp
+The 
+.Fn au_print_flags_tok
+function was added by Stacey Son as a replacement for the
+.Fn au_print_tok
+so new output formatting flags can be easily added without changing the API.
+The 
+.Fn au_print_tok
+is obsolete but remains in the API to support legacy code.
 .Sh AUTHORS
 .An -nosplit
 This software was created by
