--- a/libbsm/au_io.3
+++ b/libbsm/au_io.3
@@ -1,4 +1,5 @@
 .\"-
+.\" Copyright (c) 2009 Apple, Inc.
 .\" Copyright (c) 2005 Robert N. M. Watson
 .\" All rights reserved.
 .\"
@@ -23,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_io.3#7 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_io.3#8 $
 .\"
 .Dd August 4, 2009
 .Dt AU_IO 3
@@ -87,9 +88,11 @@ The
 controls how the output should be formatted and is specified by
 or'ing the following flags:
 .Pp
-.Bl -tag -width AU_OFLAG_SHORT -compact -offset indent
+.Bl -tag -width AU_OFLAG_NORESOLVE -compact -offset indent
 .It Li AU_OFLAG_NONE
 Use the default form.
+.It Li AU_OFLAG_NORESOLVE
+Leave user and group IDs in their numeric form.
 .It Li AU_OFLAG_RAW
 Use the raw, numeric form.
 .It Li AU_OFLAG_SHORT
