--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 OpenBSM Version History
 
+OpenBSM 1.2 alpha 1
+
 OpenBSM 1.1p2
 
 - Fix audit_event definitions of AUE_OPENAT_RWT and AUE_OPENAT_RWTC.
@@ -464,4 +466,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#43 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#44 $
