--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ OpenBSM Version History
 
 OpenBSM 1.2 alpha 1
 
+- Add audit events for FreeBSD process descriptor system calls.
+
 OpenBSM 1.1p2
 
 - Fix audit_event definitions of AUE_OPENAT_RWT and AUE_OPENAT_RWTC.
@@ -466,4 +468,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#44 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#45 $
