--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,7 @@ OpenBSM Version History
 
 OpenBSM 1.2 alpha 1
 
-- Add audit events for FreeBSD process descriptor system calls, ENOTCAPABLE
-  BSM errno constant.
+- Add Capsicum-related error numbers for FreeBSD: ENOTCAPABLE, ECAPMODE.
 
 OpenBSM 1.1p2
 
@@ -469,4 +468,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#46 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#47 $
