--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,12 @@ OpenBSM Version History
 OpenBSM 1.2 alpha 1
 
 - Add Capsicum-related error numbers for FreeBSD: ENOTCAPABLE, ECAPMODE.
+- Add Capsicum, process descriptor audit events for FreeBSD.
+- Allow 0% minspace.
+- Fixes from the clang static analyser.
+- Fix expiration of trail files when the host parameter is used.
+- Various typo fixes.
+- Support for Solaris privilege and privilege set tokens.
 
 OpenBSM 1.1p2
 
@@ -468,4 +474,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#47 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#48 $
