Document getacfilesz() return values and sort getac* functions.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 205490]

--- a/libbsm/au_control.3
+++ b/libbsm/au_control.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_control.3#12 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_control.3#13 $
 .\"
 .Dd April 19, 2005
 .Dt AU_CONTROL 3
@@ -172,10 +172,11 @@ to a numeric audit policy mask returned via
 .Fa policy .
 .Sh RETURN VALULES
 The
+.Fn getacfilesz ,
 .Fn getacdir ,
-.Fn getacmin ,
 .Fn getacexpire ,
 .Fn getacflg ,
+.Fn getacmin ,
 .Fn getacna ,
 .Fn getacpol ,
 and
