--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ OpenBSM 1.2 alpha 1
 - Fix expiration of trail files when the host parameter is used.
 - Various typo fixes.
 - Support for Solaris privilege and privilege set tokens.
+- Documentation for getachost(), improvements for getacfilesz().
+- A variety of minor documentation, style, and functional.
 
 OpenBSM 1.1p2
 
@@ -474,4 +476,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#48 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#49 $
