--- a/man/auditon.2
+++ b/man/auditon.2
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/auditon.2#17 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/auditon.2#18 $
 .\"
 .Dd January 29, 2009
 .Dt AUDITON 2
@@ -237,7 +237,7 @@ The field
 must point to a
 .Fa au_mask_t
 structure which holds the preselection masks as described in the
-.Da A_SETKMASK
+.Dv A_SETKMASK
 section above.
 .It Dv A_SETFSIZE
 Set the maximum size of the audit log file.
