--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ OpenBSM 1.2 alpha 1
 - Various typo fixes.
 - Support for Solaris privilege and privilege set tokens.
 - Documentation for getachost(), improvements for getacfilesz().
+- Fix a directory descriptor leak that happened when audit trail partitions
+  filled.
 - A variety of minor documentation, style, and functional.
 
 OpenBSM 1.1p2
@@ -476,4 +478,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#49 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#50 $
