--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ OpenBSM 1.2 alpha 1
 - Documentation for getachost(), improvements for getacfilesz().
 - Fix a directory descriptor leak that happened when audit trail partitions
   filled.
+- Support for more Linux distributions with a partial contemporary endian.h.
 - A variety of minor documentation, style, and functional.
 
 OpenBSM 1.1p2
@@ -478,4 +479,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#50 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#51 $
