--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ OpenBSM 1.2 alpha 1
 - Fix a directory descriptor leak that happened when audit trail partitions
   filled.
 - Support for more Linux distributions with a partial contemporary endian.h.
+- Improved escaping of XML-encapsulated BSM.
 - A variety of minor documentation, style, and functional.
 
 OpenBSM 1.1p2
@@ -479,4 +480,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#51 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#52 $
