--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,14 @@
 OpenBSM Version History
 
+OpenBSM 1.2 alpha 2
+
+- auditdistd, a distributed audit trail management daemon, has now been
+  merged.  This allows trail files to be securely and reliably synced from
+  audited hosts to an audit server, and employs TLS encryption.  Where
+  available, it uses Capsicum to sandbox the service.  This work was
+  contributed by Pawel Jakub Dawidek under sponsorship from the FreeBSD
+  Foundation. 
+
 OpenBSM 1.2 alpha 1
 
 - Add Capsicum-related error numbers for FreeBSD: ENOTCAPABLE, ECAPMODE.
@@ -480,4 +489,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#52 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#53 $
