--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ OpenBSM 1.2 alpha 3
 
 - Various minor tweaks to the auditdistd build to make it fit the FreeBSD
   build environment better.
+- AUE_WAIT6 merged from FreeBSD 9.
 
 OpenBSM 1.2 alpha 2
 
@@ -494,4 +495,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#54 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#55 $
