Fix manpage warnings found by mandoc -Tlint

--- a/libauditd/libauditd.3
+++ b/libauditd/libauditd.3
@@ -45,7 +45,7 @@ library provides the internal implementation of
 There are no public interfaces in
 .Nm .
 .Sh SEE ALSO
-.Xr auditd 8 .
+.Xr auditd 8
 .Sh HISTORY
 The OpenBSM implementation was created by McAfee Research, the security
 division of McAfee Inc., under contract to Apple Computer, Inc., in 2004.
