--- a/libbsm/au_control.3
+++ b/libbsm/au_control.3
@@ -56,7 +56,7 @@
 .Ft int
 .Fn getacdist "void"
 .Ft int
-.Fn getacexpire "int *andflg, time_t *age, size_t *size"
+.Fn getacexpire "int *andflg" "time_t *age" "size_t *size"
 .Ft int
 .Fn getacfilesz "size_t *size_val"
 .Ft int
