--- a/bin/auditd/auditd.8
+++ b/bin/auditd/auditd.8
@@ -27,7 +27,7 @@
 .\"
 .\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.8#19 $
 .\"
-.Dd December 11, 2008
+.Dd July 25, 2015
 .Dt AUDITD 8
 .Os
 .Sh NAME
@@ -123,7 +123,7 @@ and are no longer available as arguments to
 .Xr audit_warn 5 ,
 .Xr audit 8 ,
 .Xr auditdistd 8 ,
-.Xr launchd 8
+.Xr launchd 8 (Mac OS X)
 .Sh HISTORY
 The OpenBSM implementation was created by McAfee Research, the security
 division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
