--- a/man/auditon.2
+++ b/man/auditon.2
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 29, 2009
+.Dd April 7, 2016
 .Dt AUDITON 2
 .Os
 .Sh NAME
@@ -301,7 +301,7 @@ argument
 must point to a
 .Vt auditpinfo_addr_t
 structure which is similar to the
-.Vt auditpinfo_addr_t
+.Vt auditpinfo_t
 structure described above.
 The exception is the
 .Fa ap_termid
