--- a/README
+++ b/README
@@ -2,9 +2,9 @@ OpenBSM
 
   Introduction
 
-OpenBSM is an open source implementation of Sun's BSM event auditing file
+OpenBSM is an open-source implementation of Sun's BSM event auditing file
 format and API.  Originally created for Apple Computer by McAfee Research,
-OpenBSM is now maintained by volunteers and through the generous contribution
+OpenBSM is now maintained by volunteers and through the generous contributions
 of several organizations.
 
 OpenBSM includes several command line tools, including auditreduce(8) and
@@ -51,9 +51,9 @@ Please see the file INSTALL for build and installation instructions.
   Contributions
 
 The TrustedBSD Project would appreciate the contribution of bug fixes, 
-enhancements, etc, under identically or substantially similar licenses to 
-those present on the remainder of the OpenBSM source code.  Please see the
-file CREDITS to learn more about who has contributed to the project.
+enhancements, etc, under the same license found in the top-level LICENSE file.
+Please see the file CREDITS to learn more about who has contributed to the
+project.
 
   Location
 
