--- a/INSTALL
+++ b/INSTALL
@@ -14,6 +14,17 @@ appears to work on Ubuntu:
 
     sudo apt-get install libssl-dev
 
+Similarly, Mac OS X systems will require OpenSSL support:
+
+    brew install openssl
+
+Mac OS X systems will similarly require setting CFLAGS and LDFLAGS to notify
+configure of the location of the OpenSSL headers and library:
+
+    CFLAGS=-I/usr/local/opt/openssl/include			\
+    LDFLAGS=-L/usr/local/opt/openssl/lib			\
+    configure
+
 To install the library, binaries, and man pages, use:
 
     make install
