Remove duplicated words.

--- a/man/audit_control.5
+++ b/man/audit_control.5
@@ -123,7 +123,7 @@ records can exceed this number, as it does not constrain uncommitted records
 (e.g., those associated with incomplete auditable system calls), and may also
 exclude the set of records extracted from the queue and currently being
 prepared for or undergoing I/O.
-Other operational limits may be affected by this parameter, such as the as the
+Other operational limits may be affected by this parameter, such as the
 minimum free space on disk required to continue system operation, estimated as
 the maximum number of allowable in-flight records multiplied by the maximum
 audit record size.
