--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ OpenBSM 1.2 alpha 5
   posix_fallocate(2) and posix_fadvise(2).
 - On operating systems supporting Capsicum, auditreduce(1) and praudit(1) now
   run sandboxed.
+- Empty "flags" and "naflags" fields are now permitted in audit_control(5).
 
 OpenBSM 1.2 alpha 4
 
